redpanda-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redpanda-ingress
  namespace: redpanda
  annotations:
    nginx.ingress.kubernetes.io/stream-snippet: |
      map $ssl_preread_server_name:$server_port $targetBackend {
        ~^(?<broker>.+).local:9644$ $broker.redpanda.redpanda.svc.cluster.local.:9644;
        ~^(?<broker>.+).local:8083$ $broker.redpanda.redpanda.svc.cluster.local.:8083;
        ~^(?<broker>.+).local:8084$ $broker.redpanda.redpanda.svc.cluster.local.:8084;
        ~^(?<broker>.+).local:9094$ $broker.redpanda.redpanda.svc.cluster.local.:9094;
      }
      server {
        listen 9644;

        proxy_connect_timeout 1s;
        proxy_timeout 3s;

        proxy_pass $targetBackend;
        ssl_preread on;
      }
      server {
        listen 8083;

        proxy_connect_timeout 1s;
        proxy_timeout 3s;

        proxy_pass $targetBackend;
        ssl_preread on;
      }
      server {
        listen 8084;

        proxy_connect_timeout 1s;
        proxy_timeout 3s;

        proxy_pass $targetBackend;
        ssl_preread on;
      }
      server {
        listen 9094;

        proxy_connect_timeout 1s;
        proxy_timeout 3s;

        proxy_pass $targetBackend;
        ssl_preread on;
      }

spec:
  ingressClassName: nginx
  rules:
  - host: redpanda-0.local
  - host: redpanda-1.local
  - host: redpanda-2.local
